fix: edit freetype template.

--- a/client/app/scripts/liveblog-freetypes/views/list.html
+++ b/client/app/scripts/liveblog-freetypes/views/list.html
@@ -54,11 +54,7 @@
                     </div>
                     <div class="field">
                         <label translate>Free Type Template <span class="ft-comments">*</span> <span class="ft-alert" translate ng-if="!vm.dialogFreetype.template">required</span></label>
-                        <div class="form-box"
-                            template-editable
-                            contenteditable="true"
-                            ng-model="vm.dialogFreetype.template"
-                        ></div>
+                        <textarea ng-model="vm.dialogFreetype.template" rows="15"></textarea>
                     </div>
                     <div class="field ft-comments">
                     * <span translate class="c">Must contain at least one variable.<span><span>&nbsp;Do not use the DOCTYPE, BODY and HEAD tags.</span><span translate>&nbsp;All used tags must be closed.</span>
