--- a/templates/template-timeline.html
+++ b/templates/template-timeline.html
@@ -31,11 +31,14 @@
       </div>
     </div>
     <div class="header-bar__actions"></div>
-    <a href="https://www.liveblog.pro" target="_blank">
-      <img
-        ng-src="{{ assets_root }}/images/lb-logo.svg"
-        src="{{ assets_root }}/images/lb-logo.svg" />
-    </a>
+
+    {% if settings.showLiveblogLogo %}
+      <a href="https://www.liveblog.pro" target="_blank">
+        <img
+          ng-src="{{ assets_root }}/images/lb-logo.svg"
+          src="{{ assets_root }}/images/lb-logo.svg" />
+      </a>
+    {% endif %}
   </div>
   <!-- Header End -->
 
