--- a/templates/template-comment.html
+++ b/templates/template-comment.html
@@ -1,9 +1,9 @@
 <form class="comment hide">
   <div>
-    <input type="name" placeholder="Name" />
+    <input type="name" placeholder="Name" id="comment-name" />
   </div>
   <div>
-    <textarea placeholder="Comment"></textarea>
+    <textarea placeholder="Comment" id="comment-content"></textarea>
   </div>
   <div>
     <button>Cancel</button>
