LBSD-1609 Outputs CRUD e2e

--- a/client/app/scripts/liveblog-edit/views/settings.html
+++ b/client/app/scripts/liveblog-edit/views/settings.html
@@ -31,7 +31,7 @@
                 <li ng-class="{active: (settings.tab === 'team')}" data="blog-settings-team">
                     <a ng-href="" ng-click="settings.changeTab('team')" translate>Team</a>
                 </li>
-                <li ng-class="{active: (settings.tab === 'outputs')}" ">
+                <li ng-class="{active: (settings.tab === 'outputs')}" data="blog-settings-outputs">
                     <a ng-href="" ng-click="settings.changeTab('outputs')" translate>Output Channels</a>
                 </li>
             </ul>
