--- a/client/app/scripts/liveblog-freetypes/views/list.html
+++ b/client/app/scripts/liveblog-freetypes/views/list.html
@@ -2,7 +2,7 @@
     <h3 class="page-nav-title" translate>Free types manager</h3>
     <div class="button-stack right-stack">
         <button class="navbtn navbtn-info" ng-click="vm.openFreetypeDialog();" title="{{ 'Create Free Type' | translate }}">
-            <i class="svg-icon-add inverse"></i>
+            <i class="svg-icon-add inverse"></i> <span class="title" translate>Create Free Type</span>
         </button>
     </div>
 </div>
