Cancel button for comment form

--- a/templates/template-comment.html
+++ b/templates/template-comment.html
@@ -6,7 +6,7 @@
     <textarea placeholder="Comment" id="comment-content"></textarea>
   </div>
   <div>
-    <button>Cancel</button>
+    <button data-js-close-comment-dialog>Cancel</button>
     <button>Send</button>
   </div>
 </form>
