--- a/client/app/scripts/liveblog-edit/views/settings.html
+++ b/client/app/scripts/liveblog-edit/views/settings.html
@@ -364,7 +364,7 @@
                                     <ul class="pills-list">
                                         <li ng-repeat="output in settings.outputs">
                                             <h6 class="pull-left">
-                                                <span class="cursor-pointer" ng-click="settings.openOutputDialog(output);">{{ output.name }}</span>
+                                                <span class="cursor-pointer" ng-click="settings.openOutputDialog(output);" id="output-name">{{ output.name }}</span>
                                             </h6>
                                             
                                             <div class="actions">
