fix: braking ui with navbtn.

--- a/client/app/scripts/liveblog-themes/views/list.html
+++ b/client/app/scripts/liveblog-themes/views/list.html
@@ -6,7 +6,7 @@
             method="post"
             enctype="multipart/form-data"
             ng-if="!vm.hasReachedThemesLimit() && !vm.isSolo()">
-            <label class="navbtn navbtn-info" for="uploadAThemeFile" title="{{ 'New Theme' | translate }}">
+            <label class="navbtn navbtn-info navbtn-auto" for="uploadAThemeFile" title="{{ 'New Theme' | translate }}">
                 <i class="svg-icon-add inverse"></i> <span class="title" translate>New Theme</span>
             </label>
             <input
