--- a/templates/template-timeline.html
+++ b/templates/template-timeline.html
@@ -1,7 +1,7 @@
 {% block timeline %}
 <div class="lb-timeline {{ settings.language }}">
   {% if settings.showTitle and blog.title %}
-    <h1>{{ settings.blog.title }}</h1>
+    <h1>{{ blog.title }}</h1>
   {% endif %}
 
   {% if settings.showDescription and blog.description %}
