Author post position reordering and css changes (#28)
* Author post position reordering and css changes.
* Avatar change.

--- a/less/tags.less
+++ b/less/tags.less
@@ -10,8 +10,8 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-weight: 400;
-    color: #333333;
-    font-size: 17px;
+    color: @black;
+    font-size: 16px;
     line-height: 1.3em;
     border-top: 2px solid #ececec;
 }
