--- a/less/tags.less
+++ b/less/tags.less
@@ -51,14 +51,14 @@ button {
     display: table;
     margin: auto;
     padding: 5px 25px;
-    font-size: 16px;
+    font-size: 1em;
     line-height: 1;
     appearance: none;
     box-shadow: none;
     color: #5ea9c8;
     background: rgba(0,0,0,0);
     cursor: pointer;
-    border: solid 3px #5ea9c8;
+    border: none;
 }
 button:focus {outline: none}
 button:hover,
