--- a/templates/template-comment.html
+++ b/templates/template-comment.html
@@ -1,13 +1,16 @@
 <form class="comment hide">
-  <div>
-    <input type="name" placeholder="Name" id="comment-name" />
-  </div>
-  <div>
-    <textarea placeholder="Comment" id="comment-content"></textarea>
-  </div>
-  <div>
-    <button data-js-close-comment-dialog>Cancel</button>
-    <button>Send</button>
+  <div class="comment__wrap">
+    <h2 class="comment__headline">Post a comment</h2>
+    <div>
+      <input type="name" placeholder="Name" id="comment-name" />
+    </div>
+    <div>
+      <textarea placeholder="Comment" id="comment-content"></textarea>
+    </div>
+    <div>
+      <button class="comment__button">Send</button>
+      <button class="comment__button comment__button--grey" data-js-close-comment-dialog>Cancel</button>
+    </div>
   </div>
 </form>
 
