--- a/templates/template-timeline.html
+++ b/templates/template-timeline.html
@@ -43,9 +43,7 @@
       {% if settings.showLiveblogLogo %}
         <a class="header-bar__logo" href="https://www.liveblog.pro" target="_blank">
           <span>Powered by</span>
-          <img
-            ng-src="{{ assets_root }}/images/lb-logo.svg"
-            src="{{ assets_root }}/images/lb-logo.svg" />
+          <img src="./images/lb-logo.svg" />
         </a>
       {% endif %}
     </div>
