--- a/client/app/scripts/liveblog-edit/views/post.html
+++ b/client/app/scripts/liveblog-edit/views/post.html
@@ -47,12 +47,12 @@
                                     <i class="icon-close-thick"></i>
                                 </a>
                             </li>
-                            <li ng-if="functionize(postsListCtrl.allowEditing)(post)">
+                            <li ng-if="functionize(postsListCtrl.allowEditing)(post) && postsListCtrl.isEditable(post)">
                                 <a ng-click="onEditClick(post)" tooltip-placement="bottom" tooltip="{{ 'Edit' | translate }}">
                                     <i class="icon-pencil"></i>
                                 </a>
                             </li>
-                            <li ng-if="functionize(postsListCtrl.allowUnpublishing)(post)">
+                            <li ng-if="functionize(postsListCtrl.allowUnpublishing)(post) && postsListCtrl.isEditable(post)">
                                 <a ng-click="unpublishPost(post)" tooltip-placement="bottom" tooltip="{{ 'Unpublish and save in contributions' | translate }}">
                                     <i class="icon-unpublish" alt="contributions posts"></i>
                                 </a>
