--- a/client/app/scripts/liveblog-advertising/styles/advertising.scss
+++ b/client/app/scripts/liveblog-advertising/styles/advertising.scss
@@ -45,3 +45,12 @@
 .ads-media-buttons {
 	margin-top: 10px;
 }
+
+.preview img {
+    width: auto !important;
+    max-width: 100%;
+}
+
+.preview .preview-large {
+    text-align: center;
+}
