Created a search-filter directive

--- a/client/app/scripts/liveblog-marketplace/views/search-panel.html
+++ b/client/app/scripts/liveblog-marketplace/views/search-panel.html
@@ -10,74 +10,27 @@
 
     <div class="content">
         <div class="filter-content">
-            <div class="filter-title">
-                <div class="toggle-box">
-                    <div class="toggle-box__header">
-                        <div class="toggle-box__chevron">
-                            <i class="icon-chevron-right-thin"></i>
-                        </div>
-                        <div class="toggle-box__label">{{:: 'Categories' | translate}}</div>
-                    </div>
-                    <div class="toggle-box__content">
-                        <ul class="filter-box">
-                            <li
-                                ng-repeat="category in categories"
-                                ng-click="toggleFilter('category', category)">
-                                <span
-                                    class="sd-checkbox"
-                                    ng-checked="hasFilter('category', category)"></span>
-                                <span>{{ key | translate}} <i>{{ category }}</i></span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="filter-title">
-                <div class="toggle-box">
-                    <div class="toggle-box__header">
-                        <div class="toggle-box__chevron">
-                            <i class="icon-chevron-right-thin"></i>
-                        </div>
-                        <div class="toggle-box__label">{{:: 'Marketers' | translate}}</div>
-                    </div>
-                    <div class="toggle-box__content">
-                        <ul class="filter-box">
-                            <li
-                                ng-repeat="marketer in marketers._items track by marketer._id"
-                                ng-click="toggleFilter('marketer._id', marketer._id)">
-                                <span
-                                    class="sd-checkbox"
-                                    ng-checked="hasFilter('marketer._id', marketer._id)"></span>
-                                <span>{{ key | translate}} <i>{{ marketer.name }}</i></span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="filter-title">
-                <div class="toggle-box">
-                    <div class="toggle-box__header">
-                        <div class="toggle-box__chevron">
-                            <i class="icon-chevron-right-thin"></i>
-                        </div>
-                        <div class="toggle-box__label">{{:: 'Languages' | translate}}</div>
-                    </div>
-                    <div class="toggle-box__content">
-                        <ul class="filter-box">
-                            <li
-                                ng-repeat="language in languages track by language.code"
-                                ng-click="toggleFilter('language', language.code)">
-                                <span
-                                    class="sd-checkbox"
-                                    ng-checked="hasFilter('language', language.code)"></span>
-                                <span>{{ key | translate}} <i>{{ language.name }}</i></span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
+            <div
+                lb-search-filter
+                filters="filters"
+                terms="categories"
+                title="{{:: 'Categories' | translate }}"
+                key="category"
+                id="code"></div>
+            <div
+                lb-search-filter
+                filters="filters"
+                terms="marketers._items"
+                title="{{:: 'Marketers' | translate }}"
+                key="marketer"
+                id="_id"></div>
+            <div
+                lb-search-filter
+                filters="filters"
+                terms="languages"
+                title="{{:: 'Languages' | translate }}"
+                key="language"
+                id="code"></div>
         </div>
     </div>
 
