--- a/client/app/scripts/liveblog-edit/views/scorecards.html
+++ b/client/app/scripts/liveblog-edit/views/scorecards.html
@@ -104,7 +104,7 @@
             </div>
             <div>
                 <label for="home.score" hide-render>Score</label>
-                <input id="home.score" name="$home.score" class="team-score" number="true" necessary="true" initial="0" />
+                <input id="home.score" name="$home.score" class="team-score" number="true" necessary="true"/>
             </div>
         </fieldset>
         <fieldset>
@@ -132,7 +132,7 @@
             </div>
             <div>
                 <label for="away.score" hide-render>Score</label>
-                <input id="away.score" name="$away.score" class="team-score" necessary="true" initial="0" number="true" />
+                <input id="away.score" name="$away.score" class="team-score" necessary="true" number="true"/>
             </div>
         </fieldset>
 
