--- a/styles/embed.css
+++ b/styles/embed.css
@@ -1,5 +1,7 @@
 body {
     background-color: #EAEAEA;
+    background-repeat: no-repeat;
+    background-position-x: center;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     color: #333333;
@@ -273,6 +275,8 @@ button.active {
     position: absolute;
     right: 10px;
     top: 5px;
+    max-height: 50px;
+    max-width: 250px;
 }
 .load-new-posts {
     font-size: 1.2em;
