--- a/client/app/scripts/liveblog-edit/views/post.html
+++ b/client/app/scripts/liveblog-edit/views/post.html
@@ -23,10 +23,12 @@
                         <span class="name">{{ ::post.mainItem.item.user.display_name }}</span> | <time>{{ post._created | reldate }}</time>
                     </div>
                     <div class="inline" ng-if="post.post_status == 'open'">
-                        <span class="name">
-                            {{ ::post.mainItem.item.user.display_name || post.producer_blog_title }}
+                        <span
+                                class="name"
+                                lb-bind-html
+                                html-content="{{ post.mainItem.item.user.display_name || post.producer_blog_title }}">
                         </span>
-                        &nbsp;|&nbsp;
+                        &nbsp;|
                         <time>{{ post.published_date | reldate }}</time>
                     </div>
                     <div class="inline" ng-if="post.showUpdate">
