--- a/client/app/scripts/liveblog-edit/views/settings.html
+++ b/client/app/scripts/liveblog-edit/views/settings.html
@@ -4,7 +4,7 @@
             <i class="icon-th-large"></i>
         </a>
     </div>
-    <h3 class="page-nav-title">{{ settings.blog.title }}</h3>
+    <h3 class="page-nav-title"><a href="/#/liveblog/edit/{{ settings.blog._id }}?panel=editor" title="{{ 'Back to blog authoring' | translate }} ">{{ settings.blog.title }}</a></h3>
     <div class="button-stack right-stack active settings-disabled">
         <span class="navbtn">
             <i class="svg-icon-analytics"></i>
