--- a/client/app/scripts/liveblog-syndication/views/syndication-switch.html
+++ b/client/app/scripts/liveblog-syndication/views/syndication-switch.html
@@ -16,6 +16,14 @@
                 data-syndication-status-switch></span>
         </span>
     </div>
+    <ul ng-if="consumers.length > 0">
+        <li ng-repeat="consumer in consumers track by consumer._id">
+            <p>
+                <b>{{consumer.name}}</b>
+                <span>{{consumer.webhook_url}}</span>
+            </p>
+        </li>
+    </ul>
 </div>
 
 
