Fixed filtering of blogs by marketer

--- a/client/app/scripts/liveblog-marketplace/views/search-panel.html
+++ b/client/app/scripts/liveblog-marketplace/views/search-panel.html
@@ -22,7 +22,7 @@
                 filters="filters"
                 terms="marketers._items"
                 title="{{:: 'Marketers' | translate }}"
-                key="marketer"
+                key="marketer._id"
                 id="_id"></div>
             <div
                 lb-search-filter
