--- a/less/slideshow.less
+++ b/less/slideshow.less
@@ -5,3 +5,26 @@ article.slideshow div.lb-item {
     cursor: pointer;
   }
 }
+
+#slideshow {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: pink;
+  overflow: hidden;
+
+  figure {
+    width: 100%;
+    height: 100%;
+    float: left;
+    text-align: center;
+    margin: 0;
+
+    img {
+      height: 100%;
+    }
+  }
+}
