--- a/less/slideshow.less
+++ b/less/slideshow.less
@@ -16,15 +16,19 @@ article.slideshow div.lb-item {
   background: pink;
   overflow: hidden;
 
-  figure {
-    width: 100%;
+  div.container {
     height: 100%;
-    float: left;
-    text-align: center;
-    margin: 0;
 
-    img {
+    figure {
+      width: 100%;
       height: 100%;
+      float: left;
+      text-align: center;
+      margin: 0;
+
+      img {
+        height: 100%;
+      }
     }
   }
 }
