Add new active class

--- a/templates/template-item-image.html
+++ b/templates/template-item-image.html
@@ -1,5 +1,6 @@
 <figure>
   <img 
+    {% if ref.item.active %}class="active"{% endif %}
     src="{{ ref.item.meta.media.renditions.thumbnail.href }}"
     srcset="{{ ref.item.meta.media.renditions.baseImage.href }} 810w, 
     {{ ref.item.meta.media.renditions.thumbnail.href }} 240w, 
