Fixed missing marketer name

--- a/client/app/scripts/liveblog-marketplace/views/blogs-list.html
+++ b/client/app/scripts/liveblog-marketplace/views/blogs-list.html
@@ -18,7 +18,7 @@
         <div class="footer">
             <dl>
                 <dt>{{ ::'Blog owner' | translate }}:</dt>
-                <dd>{{ ::blog.marketer_name }}</dd>
+                <dd>{{ ::blog.marketer.name }}</dd>
                 <dt>{{ ::'Start date' | translate }}:</dt>
                 <dd><time>{{ ::blog.start_date | reldate }}</time></dd>
                 <dt>{{ ::'Category' | translate }}:</dt>
