LBSD-1367 Limit scorecard fields
this will enable the maxlength attribute to other inputs as well

--- a/client/app/scripts/liveblog-edit/views/freetype-text.html
+++ b/client/app/scripts/liveblog-edit/views/freetype-text.html
@@ -1,6 +1,6 @@
 <div class="form-group">
     <div class="form-input">
-        <input type="text" ng-model="text"/>
+        <input type="text" ng-model="text" ng-attr-maxlength="{{maxlength}}"/>
         <span
             class="freetype--error freetype--error-text"
             ng-show="necessaryFlag"
