Full screen button

--- a/less/slideshow.less
+++ b/less/slideshow.less
@@ -31,4 +31,10 @@ article.slideshow div.lb-item {
       }
     }
   }
+
+  button.fullscreen {
+    position: absolute;
+    right: 0;
+    bottom: 10px;
+  }
 }
