--- a/server/liveblog/themes/themes_assets/default/templates/template-slideshow.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-slideshow.html
@@ -4,4 +4,5 @@
       {% include "template-item-image.html" %}
     {% endfor %}
   </div>
+  <button class="fullscreen">Fullscreen</button>
 </div>
