--- a/templates/template-timeline.html
+++ b/templates/template-timeline.html
@@ -57,13 +57,23 @@
 
   <!-- Timeline -->
   <div class="timeline-body timeline-body--loaded">
-    {% if api_response._items|length == 0 %}
+    {% if api_response.stickyPosts._items|length > 0 %}
+      <section class="lb-posts list-group sticky">
+        {% for item in api_response.stickyPosts._items %}
+          {% if not item.deleted %}
+            {% include "template-post.html" %}
+          {% endif %}
+        {% endfor %}
+      </section>
+    {% endif %}
+
+    {% if api_response.posts._items|length == 0 %}
       <div class="lb-post empty-message">
         <div>Blog posts are not currently available.</div>
       </div>
       {% else %}
       <section class="lb-posts list-group">
-        {% for item in api_response._items %}
+        {% for item in api_response.posts._items %}
           {% if not item.deleted %}
             {% include "template-post.html" %}
           {% endif %}
@@ -74,7 +84,8 @@
       {% endif %}
     {% endif %}
   </div>
-<!-- Timeline End -->
+  <!-- Timeline End -->
+
 </div>
 {% endblock %}
 
